--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -198,3 +198,25 @@ body {
     display: block;
   }
 }
+
+.icon {
+  width: 48px;  // Adjust this size to match FontAwesome's size="3x"
+  height: 48px;
+}
+
+.fa-icon {
+  font-size: 3em; // FontAwesome size="3x" equivalent
+}
+
+.sun-icon-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 60px;  // Match FontAwesome icon size
+  height: 60px;
+}
+
+.sun-icon {
+  width: 100%;
+  height: 100%;
+}
